--- a/shapki/index.html
+++ b/shapki/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Шапки</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<header>
-<ul>
+<header class="content-wrapper">
+<div class="header-top flex">
+<ul class="flex">
     <li><a href="#">О Компании</a></li>
     <li><a href="#">Доставка</a></li>
     <li><a href="#">Гарантии</a></li>
     <li><a href="#">Контакты</a></li>
 </ul>
-
+</div>
+<ul>
 </header>
 <body>
     
@@ -22,4 +25,5 @@
 <footer>
 
 </footer>
+<script src="js/jq-min.js"></script>
 </html>
