--- a/shapki/index.html
+++ b/shapki/index.html
@@ -7,6 +7,8 @@
     <title>Шапки</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/css/owl.theme.default.min.css">
 </head>
 <header class="content-wrapper">
 <div class="header-top flex">
@@ -15,9 +17,85 @@
     <li><a href="#">Доставка</a></li>
     <li><a href="#">Гарантии</a></li>
     <li><a href="#">Контакты</a></li>
+    <div>
+    <img src="" alt="">
+    <li><a href="#">Войти/</a></li>
+    <li><a href="#">Регистрация</a></li>
+    </div>
 </ul>
 </div>
-<ul>
+<div class="header-middle flex">
+    <img class="logo" src="" alt="">
+    <div>
+        <p class="phone">8 900 000 00 00</p>
+        <button>Обратный звонок</button>
+    </div>
+    <div>
+        <p>Трикотажные шапки, береты, шапки, снуды, 
+            варежки, перчатки </p>
+        <p>Более 50 лучших брендов в одном месте </p>
+    </div>
+    <div>
+        <img src="" alt="">
+        <p>54 товара на сумму 590 099 Р</p>
+        <img src="" alt="">
+        <p>Избранное 3</p>
+        <input type="search">
+    </div>
+</div>
+<div>
+    <ul calss="main-nav flex">
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Женщинам</a></li>
+        <li><a href="#">Мужчинам</a></li>
+        <li><a href="#">Детям</a></li>
+        <li><a href="#">Подросткам</a></li>
+        <li><a href="#">Сезонность</a></li>
+        <li><a href="#">Оборудование</a></li>
+        <li><a href="#">Новинки</a></li>
+        <li><a href="#">Хиты</a></li>
+        <li><a href="#">Акции</a></li>
+    </ul>
+    <div >Производители</div>
+    <ul class="flex">
+        <li>A</li>
+        <li>B</li>
+        <li>C</li>
+        <li>D</li>
+        <li>E</li>
+        <li>F</li>
+        <li>G</li>
+        <li>H</li>
+        <li>I</li>
+        <li>G</li>
+        <li>K</li>
+        <li>L</li>
+        <li>M</li>
+        <li>N</li>
+        <li>O</li>
+        <li>P</li>
+        <li>R</li>
+        <li>S</li>
+        <li>T</li>
+        <li>V</li>
+        <li>W</li>
+        <li>О</li>
+        <li>М</li>
+        <li>И</li>
+        <li>П</li>
+        <li>С</li>
+        <li>Т</li>
+    </ul>
+</div>
+<div class="owl-carousel">
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+  </div>
 </header>
 <body>
     
@@ -26,4 +104,5 @@
 
 </footer>
 <script src="js/jq-min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
 </html>
