--- a/shapki/index.html
+++ b/shapki/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,99 +11,240 @@
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/owl.theme.default.min.css">
 </head>
-<header class="content-wrapper">
-<div class="header-top flex">
-<ul class="flex">
-    <li><a href="#">О Компании</a></li>
-    <li><a href="#">Доставка</a></li>
-    <li><a href="#">Гарантии</a></li>
-    <li><a href="#">Контакты</a></li>
-    <div>
-    <img src="" alt="">
-    <li><a href="#">Войти/</a></li>
-    <li><a href="#">Регистрация</a></li>
+<header>
+
+    <div class="header-top content-wrapper flex">
+        <ul class="flex">
+            <li><a href="#">О Компании</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантии</a></li>
+            <li><a href="#">Контакты</a></li>
+            <div class="flex">
+                <img src="img/profile.png" width="17" height="17" alt="">
+                <li><a href="#">Войти/</a></li>
+                <li><a href="#">Регистрация</a></li>
+            </div>
+        </ul>
     </div>
-</ul>
-</div>
-<div class="header-middle flex">
-    <img class="logo" src="" alt="">
-    <div>
-        <p class="phone">8 900 000 00 00</p>
-        <button>Обратный звонок</button>
+    <div class="border"></div>
+    <div class="header-middle flex content-wrapper">
+        <img class="logo" src="img/logo-shap.png" alt="">
+        <div>
+            <p class="phone">8 900 000 00 00</p>
+            <button class="button-header">Обратный звонок</button>
+        </div>
+        <div class="main-text">
+            <p>Трикотажные шапки, береты, шапки, снуды,
+                варежки, перчатки </p>
+            <p>Более 50 лучших брендов в одном месте </p>
+        </div>
+        <div>
+            <img src="" alt="">
+            <p>54 товара на сумму 590 099 Р</p>
+            <img src="" alt="">
+            <p>Избранное 3</p>
+            <input type="search">
+        </div>
     </div>
-    <div>
-        <p>Трикотажные шапки, береты, шапки, снуды, 
-            варежки, перчатки </p>
-        <p>Более 50 лучших брендов в одном месте </p>
+
+        <ul class="main-nav flex jc-between">
+            <div class="menubutton">
+                        <div class="menuitem"></div>
+                        <div class="menuitem"></div>
+                        <div class="menuitem"></div>
+                    </div>
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Женщинам</a></li>
+            <li><a href="#">Мужчинам</a></li>
+            <li><a href="#">Детям</a></li>
+            <li><a href="#">Подросткам</a></li>
+            <li><a href="#">Сезонность</a></li>
+            <li><a href="#">Оборудование</a></li>
+            <li><a href="#">Новинки</a></li>
+            <li><a href="#">Хиты</a></li>
+            <li><a href="#">Акции</a></li>
+        </ul>
+        <div class="content-wrapper">
+        <ul class="flex jc-between">
+            <button class="proizv-button">Производители</button>
+            <li>A</li>
+            <li>B</li>
+            <li>C</li>
+            <li>D</li>
+            <li>E</li>
+            <li>F</li>
+            <li>G</li>
+            <li>H</li>
+            <li>I</li>
+            <li>G</li>
+            <li>K</li>
+            <li>L</li>
+            <li>M</li>
+            <li>N</li>
+            <li>O</li>
+            <li>P</li>
+            <li>R</li>
+            <li>S</li>
+            <li>T</li>
+            <li>V</li>
+            <li>W</li>
+            <li>О</li>
+            <li>М</li>
+            <li>И</li>
+            <li>П</li>
+            <li>С</li>
+            <li>Т</li>
+        </ul>
     </div>
-    <div>
-        <img src="" alt="">
-        <p>54 товара на сумму 590 099 Р</p>
-        <img src="" alt="">
-        <p>Избранное 3</p>
-        <input type="search">
+    <div class="owl-carousel">
+        <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
     </div>
-</div>
-<div>
-    <ul calss="main-nav flex">
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Женщинам</a></li>
-        <li><a href="#">Мужчинам</a></li>
-        <li><a href="#">Детям</a></li>
-        <li><a href="#">Подросткам</a></li>
-        <li><a href="#">Сезонность</a></li>
-        <li><a href="#">Оборудование</a></li>
-        <li><a href="#">Новинки</a></li>
-        <li><a href="#">Хиты</a></li>
-        <li><a href="#">Акции</a></li>
-    </ul>
-    <div >Производители</div>
-    <ul class="flex">
-        <li>A</li>
-        <li>B</li>
-        <li>C</li>
-        <li>D</li>
-        <li>E</li>
-        <li>F</li>
-        <li>G</li>
-        <li>H</li>
-        <li>I</li>
-        <li>G</li>
-        <li>K</li>
-        <li>L</li>
-        <li>M</li>
-        <li>N</li>
-        <li>O</li>
-        <li>P</li>
-        <li>R</li>
-        <li>S</li>
-        <li>T</li>
-        <li>V</li>
-        <li>W</li>
-        <li>О</li>
-        <li>М</li>
-        <li>И</li>
-        <li>П</li>
-        <li>С</li>
-        <li>Т</li>
-    </ul>
-</div>
-<div class="owl-carousel">
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-    <div> Your Content </div>
-  </div>
 </header>
+
 <body>
-    
+<div class="main-content content-wrapper flex">
+<section class="about-company ">
+    <h3>О компании</h3>
+    <p>Наша компания с 1996 года занимается продажей головных уборов в Новосибирске и по всей России. Выбирая нас, вы
+        делаете выбор в пользу:</p>
+    <div class="flex wrap">
+        <div class="about-item">
+        <img src="img/1-1.png" width="85" height="85" alt="">
+        <p class="about-header">Огромный ассортимент</p>
+        <p class="about-text">15 тысяч моделей постоянно представлены в каталоге. 
+                По 10 тысяч моделей добавляется к 
+                каждому новому сезону. Регулярное обновление. </p>
+    </div>
+    <div class="about-item">
+        <img src="img/1-2.png" width="85" height="85" alt="">
+        <p class="about-header">Ведущие бренды</p>
+        <p class="about-text">Шапки Laplanda, Static, Marhatter, береты Tonak и другие марки. Продукция ведущих мировых и российских производителей. 
+            </p>
+    </div>
+    <div class="about-item">
+        <img src="img/1-3.png" width="85" height="85" alt="">
+        <p class="about-header">Удобное расположение</p>
+        <p class="about-text">Новосибирск – современный город с развитой транспортной системой. Добраться до нас не составит никакого труда. </p>
+    </div>
+    <div class="about-item">
+        <img src="img/1-4.png" width="85" height="85" alt="">
+        <p class="about-header">Широкий выбор</p>
+        <p class="about-text">Коллекции для покупателей с самыми разными запросами и бюджетными возможностями</p>
+    </div>
+    <div class="about-item">
+        <img src="img/1-5.png" width="85" height="85" alt="">
+        <p class="about-header">Удобный сайт</p>
+        <p class="about-text">Качественные фото, выбор расцветок, все модели с описаниями, быстрый поиск товаров. Экономьте время и деньги, заказывая через сайт! </p>
+    </div>
+    <div class="about-item">
+        <img src="img/1-6.png" width="85" height="85" alt="">
+        <p class="about-header">Клуб Покупателей</p>
+        <p class="about-text">Полная информация о всех новинках, скидках, акциях. Покупка товаров «наборами» по специальным ценам. </p>
+    </div>
+    <div class="about-item">
+        <img src="img/1-7.png" width="85" height="85" alt="">
+        <p class="about-header">Эксклюзивные коллекции</p>
+        <p class="about-text">Некоторые коллекции в России вы найдете только у нас! </p>
+    </div>
+    <div class="about-item">
+        <img src="img/1-8.png" width="85" height="85" alt="">
+        <p class="about-header">Экономия  времени и денег</p>
+        <p class="about-text">Тренды сезона, хиты продаж и полные комплекты аксессуаров на одном сайте. </p>
+    </div>
+</div>
+<p>Но, самое главное для нас — это вы, наши покупатели, которые приходят именно к нам и, из года в год, остаются с нами.</p>
+<p>Мы благодарны вам за это, до встречи в новом сезоне – будет интересно!</p>
+</section>
+<section class="aside">
+       <div><h3>Наши поставщики</h3></div>
+       <a href="#">Artel</a>
+       <a href="#">Avanta</a>
+       <a href="#">Avenue</a>
+       <a href="#">Bebe Loca</a>
+       <a href="#">Bonds you</a>
+       <a href="#">Bonnet</a>
+       <a href="#">Brand 69</a>
+       <a href="#">Canoe</a>
+       <a href="#">Capolli</a>
+       <a href="#">Colibri</a>
+       <a href="#">Di Lana</a>
+       <a href="#">Dispacci</a>
+       <a href="#">Dress Cote</a>
+       <a href="#">El Gorro</a>
+       <a href="#">Elfrio (marhatter)</a>
+       <a href="#">Fishka</a>
+       <a href="#">Fomas</a>
+       <a href="#">Forti</a>
+       <a href="#">Gulyann Knitwear</a>
+       <a href="#">Happy Lama</a>
+       <a href="#">Harmon Moda</a>
+       <a href="#">HitHatsHOH</a>
+       <a href="#">Imojo</a>
+       <a href="#">Kamea</a>
+       <a href="#">Katta</a>
+       <a href="#">Korkki</a>
+       <a href="#">Kotik</a>
+       <a href="#">Krife</a>
+       <a href="#">Ksenzov</a>
+       <a href="#">La Chica Loca</a>
+       <a href="#">La Planda</a>
+       <a href="#">Landre</a>
+       <a href="#">Levelpro</a>
+       <a href="#">Lf Label</a>
+       <a href="#">Margot Bis</a>
+       <a href="#">Marhatter</a>
+       <a href="#">Maxval</a>
+       <a href="#">Mialt</a>
+       <a href="#">Mike Ambaroff</a>
+       <a href="#">Miks</a>
+       <a href="#">Monlolan</a>
+       <a href="#">MYLIKE</a>
+       <a href="#">NEW CAPS</a>
+       <a href="#">Noryalli</a>
+       <a href="#">Ocean Angel</a>
+       <a href="#">Oxygon</a>
+       <a href="#">Paola Belleza</a>
+       <a href="#">Pelloni</a>
+       <a href="#">Romiks</a>
+       <a href="#">Sergeo & Leoni</a>
+       <a href="#">Shapkoff</a>
+       <a href="#">Snezhna (marhatter)</a>
+       <a href="#">Sofia</a>
+       <a href="#">Static</a>
+       <a href="#">Stigler</a>
+       <a href="#">Storm</a>
+       <a href="#">Strong</a>
+       <a href="#">SuperShapka</a>
+       <a href="#">Tavitta</a>
+       <a href="#">Tex Tactiс</a>
+       <a href="#">Tonak</a>
+       <a href="#">Tornado</a>
+       <a href="#">Totti (Storm)</a>
+       <a href="#">Trend</a>
+       <a href="#">Verenitsa (Svetlitsa)</a>
+       <a href="#">Vintage+</a>
+       <a href="#">Viva La Vita (Storm)</a>
+       <a href="#">Vizio</a>
+       <a href="#">Vladi</a>
+       <a href="#">Wag</a>
+       <a href="#">Willi</a>
+       <a href="#">Woolcano</a>
+       <a href="#">Инга Шляпный дом</a>
+       <a href="#">Моя шляпка</a>
+       <a href="#">Оборудование</a>
+       <a href="#">Поляярик</a>
+       <a href="#">ПриКиндер</a>
+       <a href="#">Сиринга</a>
+       <a href="#">Теплыши</a>
+       <a href="#">Тиарис</a>
+</section>
+</div>
+
 </body>
 <footer>
 
 </footer>
 <script src="js/jq-min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
 </html>
