--- a/shapki/index.html
+++ b/shapki/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="border"></div>
     <div class="header-middle flex content-wrapper">
-        <img class="logo" src="img/logo-shap.png" alt="">
+        <img class="logo" src="img/logo-shap.png" width="107" height="115" alt="">
         <div>
             <p class="phone">8 900 000 00 00</p>
             <button class="button-header">Обратный звонок</button>
@@ -47,24 +47,24 @@
         </div>
     </div>
 
-        <ul class="main-nav flex jc-between">
-            <div class="menubutton">
-                        <div class="menuitem"></div>
-                        <div class="menuitem"></div>
-                        <div class="menuitem"></div>
-                    </div>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Женщинам</a></li>
-            <li><a href="#">Мужчинам</a></li>
-            <li><a href="#">Детям</a></li>
-            <li><a href="#">Подросткам</a></li>
-            <li><a href="#">Сезонность</a></li>
-            <li><a href="#">Оборудование</a></li>
-            <li><a href="#">Новинки</a></li>
-            <li><a href="#">Хиты</a></li>
-            <li><a href="#">Акции</a></li>
-        </ul>
-        <div class="content-wrapper">
+    <ul class="main-nav flex jc-between">
+        <div class="menubutton">
+            <div class="menuitem"></div>
+            <div class="menuitem"></div>
+            <div class="menuitem"></div>
+        </div>
+        <li><a href="#">Каталог</a></li>
+        <li><a href="#">Женщинам</a></li>
+        <li><a href="#">Мужчинам</a></li>
+        <li><a href="#">Детям</a></li>
+        <li><a href="#">Подросткам</a></li>
+        <li><a href="#">Сезонность</a></li>
+        <li><a href="#">Оборудование</a></li>
+        <li><a href="#">Новинки</a></li>
+        <li><a href="#">Хиты</a></li>
+        <li><a href="#">Акции</a></li>
+    </ul>
+    <div class="content-wrapper">
         <ul class="flex jc-between">
             <button class="proizv-button">Производители</button>
             <li>A</li>
@@ -98,153 +98,222 @@
     </div>
     <div class="owl-carousel">
         <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
+        <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
+        <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
+        <div class="slider-item"><img src="img/main-banner.png" alt=""></div>
     </div>
 </header>
 
 <body>
-<div class="main-content content-wrapper flex">
-<section class="about-company ">
-    <h3>О компании</h3>
-    <p>Наша компания с 1996 года занимается продажей головных уборов в Новосибирске и по всей России. Выбирая нас, вы
-        делаете выбор в пользу:</p>
-    <div class="flex wrap">
-        <div class="about-item">
-        <img src="img/1-1.png" width="85" height="85" alt="">
-        <p class="about-header">Огромный ассортимент</p>
-        <p class="about-text">15 тысяч моделей постоянно представлены в каталоге. 
-                По 10 тысяч моделей добавляется к 
-                каждому новому сезону. Регулярное обновление. </p>
+    <div class="main-content content-wrapper flex">
+        <section class="about-company">
+            <h3 class="sub-title">О компании</h3>
+            <p class="about-info">Наша компания с 1996 года занимается продажей головных уборов в Новосибирске и по всей
+                России. Выбирая нас, вы
+                делаете выбор в пользу:</p>
+            <div class="flex wrap">
+                <div class="about-item flex">
+                    <img src="img/1-1.png" width="85" height="85" alt="">
+                    <div>
+                        <p class="about-header">Огромный ассортимент</p>
+                        <p class="about-text">15 тысяч моделей постоянно представлены в каталоге.
+                            По 10 тысяч моделей добавляется к
+                            каждому новому сезону. Регулярное обновление. </p>
+                    </div>
+                </div>
+                <div class="about-item flex">
+                    <img src="img/1-2.png" width="85" height="85" alt="">
+                    <div>
+                        <p class="about-header">Ведущие бренды</p>
+                        <p class="about-text">Шапки Laplanda, Static, Marhatter, береты Tonak и другие марки. Продукция
+                            ведущих мировых и российских производителей.
+                        </p>
+                    </div>
+                </div>
+                <div class="about-item flex">
+                    <img src="img/1-3.png" width="85" height="85" alt="">
+                    <div>
+                        <p class="about-header">Удобное расположение</p>
+                        <p class="about-text">Новосибирск – современный город с развитой транспортной системой.
+                            Добраться до нас не составит никакого труда. </p>
+                    </div>
+                </div>
+                <div class="about-item flex">
+                    <img src="img/1-4.png" width="85" height="85" alt="">
+                    <div>
+                        <p class="about-header">Широкий выбор</p>
+                        <p class="about-text">Коллекции для покупателей с самыми разными запросами и бюджетными
+                            возможностями</p>
+                    </div>
+                </div>
+                <div class="about-item flex">
+                    <img src="img/1-5.png" width="85" height="85" alt="">
+                    <div>
+                        <p class="about-header">Удобный сайт</p>
+                        <p class="about-text">Качественные фото, выбор расцветок, все модели с описаниями, быстрый поиск
+                            товаров. Экономьте время и деньги, заказывая через сайт! </p>
+                    </div>
+                </div>
+                <div class="about-item flex">
+                    <img src="img/1-6.png" width="85" height="85" alt="">
+                    <div>
+                        <p class="about-header">Клуб Покупателей</p>
+                        <p class="about-text">Полная информация о всех новинках, скидках, акциях. Покупка товаров
+                            «наборами» по специальным ценам. </p>
+                    </div>
+                </div>
+                <div class="about-item flex">
+                    <img src="img/1-7.png" width="85" height="85" alt="">
+                    <div>
+                        <p class="about-header">Эксклюзивные коллекции</p>
+                        <p class="about-text">Некоторые коллекции в России вы найдете только у нас! </p>
+                    </div>
+                </div>
+                <div class="about-item flex">
+                    <img src="img/1-8.png" width="85" height="85" alt="">
+                    <div>
+                        <p class="about-header">Экономия времени и денег</p>
+                        <p class="about-text">Тренды сезона, хиты продаж и полные комплекты аксессуаров на одном сайте.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <p class="about-info">Но, самое главное для нас — это вы, наши покупатели, которые приходят именно к нам и,
+                из года в год, остаются с нами.</p>
+            <p class="about-info">Мы благодарны вам за это, до встречи в новом сезоне – будет интересно!</p>
+        </section>
+        <section class="aside">
+            <h3 class="header-about">Наши поставщики</h3>
+            <a style="margin-top: 20px;" href="#">Artel</a>
+            <a href="#">Avanta</a>
+            <a href="#">Avenue</a>
+            <a href="#">Bebe Loca</a>
+            <a href="#">Bonds you</a>
+            <a href="#">Bonnet</a>
+            <a href="#">Brand 69</a>
+            <a href="#">Canoe</a>
+            <a href="#">Capolli</a>
+            <a href="#">Colibri</a>
+            <a href="#">Di Lana</a>
+            <a href="#">Dispacci</a>
+            <a href="#">Dress Cote</a>
+            <a href="#">El Gorro</a>
+            <a href="#">Elfrio (marhatter)</a>
+            <a href="#">Fishka</a>
+            <a href="#">Fomas</a>
+            <a href="#">Forti</a>
+            <a href="#">Gulyann Knitwear</a>
+            <a href="#">Happy Lama</a>
+            <a href="#">Harmon Moda</a>
+            <a href="#">HitHatsHOH</a>
+            <a href="#">Imojo</a>
+            <a href="#">Kamea</a>
+            <a href="#">Katta</a>
+            <a href="#">Korkki</a>
+            <a href="#">Kotik</a>
+            <a href="#">Krife</a>
+            <a href="#">Ksenzov</a>
+            <a href="#">La Chica Loca</a>
+            <a href="#">La Planda</a>
+            <a href="#">Landre</a>
+            <a href="#">Levelpro</a>
+            <a href="#">Lf Label</a>
+            <a href="#">Margot Bis</a>
+            <a href="#">Marhatter</a>
+            <a href="#">Maxval</a>
+            <a href="#">Mialt</a>
+            <a href="#">Mike Ambaroff</a>
+            <a href="#">Miks</a>
+            <a href="#">Monlolan</a>
+            <a href="#">MYLIKE</a>
+            <a href="#">NEW CAPS</a>
+            <a href="#">Noryalli</a>
+            <a href="#">Ocean Angel</a>
+            <a href="#">Oxygon</a>
+            <a href="#">Paola Belleza</a>
+            <a href="#">Pelloni</a>
+            <a href="#">Romiks</a>
+            <a href="#">Sergeo & Leoni</a>
+            <a href="#">Shapkoff</a>
+            <a href="#">Snezhna (marhatter)</a>
+            <a href="#">Sofia</a>
+            <a href="#">Static</a>
+            <a href="#">Stigler</a>
+            <a href="#">Storm</a>
+            <a href="#">Strong</a>
+            <a href="#">SuperShapka</a>
+            <a href="#">Tavitta</a>
+            <a href="#">Tex Tactiс</a>
+            <a href="#">Tonak</a>
+            <a href="#">Tornado</a>
+            <a href="#">Totti (Storm)</a>
+            <a href="#">Trend</a>
+            <a href="#">Verenitsa (Svetlitsa)</a>
+            <a href="#">Vintage+</a>
+            <a href="#">Viva La Vita (Storm)</a>
+            <a href="#">Vizio</a>
+            <a href="#">Vladi</a>
+            <a href="#">Wag</a>
+            <a href="#">Willi</a>
+            <a href="#">Woolcano</a>
+            <a href="#">Инга Шляпный дом</a>
+            <a href="#">Моя шляпка</a>
+            <a href="#">Оборудование</a>
+            <a href="#">Поляярик</a>
+            <a href="#">ПриКиндер</a>
+            <a href="#">Сиринга</a>
+            <a href="#">Теплыши</a>
+            <a href="#">Тиарис</a>
+        </section>
     </div>
-    <div class="about-item">
-        <img src="img/1-2.png" width="85" height="85" alt="">
-        <p class="about-header">Ведущие бренды</p>
-        <p class="about-text">Шапки Laplanda, Static, Marhatter, береты Tonak и другие марки. Продукция ведущих мировых и российских производителей. 
-            </p>
-    </div>
-    <div class="about-item">
-        <img src="img/1-3.png" width="85" height="85" alt="">
-        <p class="about-header">Удобное расположение</p>
-        <p class="about-text">Новосибирск – современный город с развитой транспортной системой. Добраться до нас не составит никакого труда. </p>
-    </div>
-    <div class="about-item">
-        <img src="img/1-4.png" width="85" height="85" alt="">
-        <p class="about-header">Широкий выбор</p>
-        <p class="about-text">Коллекции для покупателей с самыми разными запросами и бюджетными возможностями</p>
-    </div>
-    <div class="about-item">
-        <img src="img/1-5.png" width="85" height="85" alt="">
-        <p class="about-header">Удобный сайт</p>
-        <p class="about-text">Качественные фото, выбор расцветок, все модели с описаниями, быстрый поиск товаров. Экономьте время и деньги, заказывая через сайт! </p>
-    </div>
-    <div class="about-item">
-        <img src="img/1-6.png" width="85" height="85" alt="">
-        <p class="about-header">Клуб Покупателей</p>
-        <p class="about-text">Полная информация о всех новинках, скидках, акциях. Покупка товаров «наборами» по специальным ценам. </p>
-    </div>
-    <div class="about-item">
-        <img src="img/1-7.png" width="85" height="85" alt="">
-        <p class="about-header">Эксклюзивные коллекции</p>
-        <p class="about-text">Некоторые коллекции в России вы найдете только у нас! </p>
-    </div>
-    <div class="about-item">
-        <img src="img/1-8.png" width="85" height="85" alt="">
-        <p class="about-header">Экономия  времени и денег</p>
-        <p class="about-text">Тренды сезона, хиты продаж и полные комплекты аксессуаров на одном сайте. </p>
-    </div>
-</div>
-<p>Но, самое главное для нас — это вы, наши покупатели, которые приходят именно к нам и, из года в год, остаются с нами.</p>
-<p>Мы благодарны вам за это, до встречи в новом сезоне – будет интересно!</p>
-</section>
-<section class="aside">
-       <div><h3>Наши поставщики</h3></div>
-       <a href="#">Artel</a>
-       <a href="#">Avanta</a>
-       <a href="#">Avenue</a>
-       <a href="#">Bebe Loca</a>
-       <a href="#">Bonds you</a>
-       <a href="#">Bonnet</a>
-       <a href="#">Brand 69</a>
-       <a href="#">Canoe</a>
-       <a href="#">Capolli</a>
-       <a href="#">Colibri</a>
-       <a href="#">Di Lana</a>
-       <a href="#">Dispacci</a>
-       <a href="#">Dress Cote</a>
-       <a href="#">El Gorro</a>
-       <a href="#">Elfrio (marhatter)</a>
-       <a href="#">Fishka</a>
-       <a href="#">Fomas</a>
-       <a href="#">Forti</a>
-       <a href="#">Gulyann Knitwear</a>
-       <a href="#">Happy Lama</a>
-       <a href="#">Harmon Moda</a>
-       <a href="#">HitHatsHOH</a>
-       <a href="#">Imojo</a>
-       <a href="#">Kamea</a>
-       <a href="#">Katta</a>
-       <a href="#">Korkki</a>
-       <a href="#">Kotik</a>
-       <a href="#">Krife</a>
-       <a href="#">Ksenzov</a>
-       <a href="#">La Chica Loca</a>
-       <a href="#">La Planda</a>
-       <a href="#">Landre</a>
-       <a href="#">Levelpro</a>
-       <a href="#">Lf Label</a>
-       <a href="#">Margot Bis</a>
-       <a href="#">Marhatter</a>
-       <a href="#">Maxval</a>
-       <a href="#">Mialt</a>
-       <a href="#">Mike Ambaroff</a>
-       <a href="#">Miks</a>
-       <a href="#">Monlolan</a>
-       <a href="#">MYLIKE</a>
-       <a href="#">NEW CAPS</a>
-       <a href="#">Noryalli</a>
-       <a href="#">Ocean Angel</a>
-       <a href="#">Oxygon</a>
-       <a href="#">Paola Belleza</a>
-       <a href="#">Pelloni</a>
-       <a href="#">Romiks</a>
-       <a href="#">Sergeo & Leoni</a>
-       <a href="#">Shapkoff</a>
-       <a href="#">Snezhna (marhatter)</a>
-       <a href="#">Sofia</a>
-       <a href="#">Static</a>
-       <a href="#">Stigler</a>
-       <a href="#">Storm</a>
-       <a href="#">Strong</a>
-       <a href="#">SuperShapka</a>
-       <a href="#">Tavitta</a>
-       <a href="#">Tex Tactiс</a>
-       <a href="#">Tonak</a>
-       <a href="#">Tornado</a>
-       <a href="#">Totti (Storm)</a>
-       <a href="#">Trend</a>
-       <a href="#">Verenitsa (Svetlitsa)</a>
-       <a href="#">Vintage+</a>
-       <a href="#">Viva La Vita (Storm)</a>
-       <a href="#">Vizio</a>
-       <a href="#">Vladi</a>
-       <a href="#">Wag</a>
-       <a href="#">Willi</a>
-       <a href="#">Woolcano</a>
-       <a href="#">Инга Шляпный дом</a>
-       <a href="#">Моя шляпка</a>
-       <a href="#">Оборудование</a>
-       <a href="#">Поляярик</a>
-       <a href="#">ПриКиндер</a>
-       <a href="#">Сиринга</a>
-       <a href="#">Теплыши</a>
-       <a href="#">Тиарис</a>
-</section>
-</div>
 
 </body>
 <footer>
-
+    <div class="borders">
+        <div class="content-wrapper flex jc-between">
+            <img class="logo-footer" src="img/logo-shap.png" height="100" widht="95" alt="">
+            <div class="socials flex">
+                <p>Мы в соц. сетях</p>
+                <a href="#"><img src="img/vk.png" alt=""></a>
+                <a href="#"><img src="/img/vk.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+    <div class="footer-content flex wrap content-wrapper">
+        <div style="border-right: 2px solid #b8b8b8" class="footer-item">
+            <p>Карта сайта</p>
+            <div class="flex wrap">
+            <div style="margin-right: 100px;">
+            <a href="#">О компании</a>
+            <a href="#">Новости</a>
+            <a href="#">Доставка</a>
+            <a href="#">Гарантии</a>
+            <a href="#">Контакты</a>
+            </div>
+            <div style="margin-right: 105px;">
+            <a href="#">Правила работы</a>
+            <a href="#">Часто задаваемые вопросы</a>
+            <a href="#">Таблица размеров</a>
+            <a href="#">Информативные статьи</a>
+        </div>
+    </div>
+        </div>
+        <div style="margin-left: 55px; marin-right: 65px; border-right: 2px solid #b8b8b8" class="footer-item">
+            <p>Личный кабинет</p>
+            <a href="#">Личный кабинет</a>
+            <a href="#">Заметки</a>
+            <a href="#">Подписка</a>
+        </div>
+        <div class="footer-item">
+            <p>Контакты</p>
+            <span>8 800 000 00 00<br>
+                Пн-пт: 9:00 - 18:00<br>
+                г. Новосибирск, ул. Воинская 63/3</span>
+        </div>
+    </div>
 </footer>
 <script src="js/jq-min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
+
 </html>
