--- a/shapki/index.html
+++ b/shapki/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#752a7e" />
+    <meta name="msapplication-navbutton-color" content="#752a7e" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#752a7e" />
     <title>Шапки</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
@@ -19,12 +22,12 @@
             <li><a href="#">Доставка</a></li>
             <li><a href="#">Гарантии</a></li>
             <li><a href="#">Контакты</a></li>
-            <div class="flex">
-                <img src="img/profile.png" width="17" height="17" alt="">
-                <li><a href="#">Войти/</a></li>
-                <li><a href="#">Регистрация</a></li>
-            </div>
         </ul>
+        <div class="flex enter">
+                <img src="img/profile.png" width="17" height="17" alt="">
+                <li><a href="#">&nbsp;Войти/</a></li>
+                <li><a href="#">&nbsp;регистрация</a></li>
+            </div>
     </div>
     <div class="border"></div>
     <div class="header-middle flex content-wrapper">
@@ -43,17 +46,35 @@
             <p>54 товара на сумму 590 099 Р</p>
             <img src="" alt="">
             <p>Избранное 3</p>
-            <input type="search">
+            <div class="search-wrapper"><input class="search" type="search" placeholder="Поиск">
+                <button class="search-submit"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="5mm" height="5mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                    viewBox="0 0 20000 20000"
+                     xmlns:xlink="http://www.w3.org/1999/xlink">
+                     <defs>
+                      <style type="text/css">
+                        .str1 {stroke:#ffffff;stroke-width:1000;stroke-miterlimit:22.9256}
+                        .str0 {stroke:#ffffff;stroke-width:1000;stroke-linecap:round;stroke-miterlimit:22.9256}
+                        .fil0 {fill:none}
+                      </style>
+                     </defs>
+                     <g id="Слой_x0020_1">
+                      <metadata id="CorelCorpID_0Corel-Layer"/>
+                      <path class="fil0 str0" d="M8732.1 13558.94c-2534.88,204.19 -4937.98,-1220.39 -6003.81,-3559.13 -1393.34,-3057.39 -73.84,-6651.98 2947.21,-8028.76 3021.04,-1376.78 6599.6,-14.38 7992.94,3043.01 1339.39,2939 175.98,6399.93 -2649.96,7883.15"/>
+                      <path class="fil0 str1" d="M13340.26 11402.46l4878.49 4878.49c0,0 992.41,1144.09 281.62,1817.5 -710.79,673.41 -1846.84,-357.93 -1846.84,-357.93l-4752.59 -5089.23"/>
+                     </g>
+                    </svg></button>
+            </div>
         </div>
     </div>
 
-    <ul class="main-nav flex jc-between">
+    <ul class="main-nav flex borders">
+        <div class="content-wrapper flex jc-between align-cent">
         <div class="menubutton">
             <div class="menuitem"></div>
             <div class="menuitem"></div>
             <div class="menuitem"></div>
         </div>
-        <li><a href="#">Каталог</a></li>
+        <li class="first-menu-item"><a href="#">Каталог</a></li>
         <li><a href="#">Женщинам</a></li>
         <li><a href="#">Мужчинам</a></li>
         <li><a href="#">Детям</a></li>
@@ -64,11 +85,25 @@
         <li><a href="#">Хиты</a></li>
         <li><a href="#">Акции</a></li>
     </ul>
-    <div class="content-wrapper">
-        <ul class="flex jc-between">
+</div>
+    <div class="content-wrapper factory">
+        <ul class="flex jc-between align-cent">
             <button class="proizv-button">Производители</button>
-            <li>A</li>
-            <li>B</li>
+            <div class="letter">
+                <li>A
+                    <div class="info-container">
+                        123123
+                    </div>
+                </li>
+            </div>
+
+            <div class="letter">
+                    <li>B
+                        <div class="info-container">
+                            5555
+                        </div>
+                    </li>
+                </div>
             <li>C</li>
             <li>D</li>
             <li>E</li>
@@ -106,7 +141,8 @@
 
 <body>
     <div class="main-content content-wrapper flex">
-        <section class="about-company">
+
+        <section class="about-company ">
             <h3 class="sub-title">О компании</h3>
             <p class="about-info">Наша компания с 1996 года занимается продажей головных уборов в Новосибирске и по всей
                 России. Выбирая нас, вы
@@ -298,7 +334,7 @@
         </div>
     </div>
         </div>
-        <div style="margin-left: 55px; marin-right: 65px; border-right: 2px solid #b8b8b8" class="footer-item">
+        <div style="margin-left: 55px; margin-right: 65px; border-right: 2px solid #b8b8b8" class="footer-item">
             <p>Личный кабинет</p>
             <a href="#">Личный кабинет</a>
             <a href="#">Заметки</a>
