--- a/shapki/index.html
+++ b/shapki/index.html
@@ -24,10 +24,10 @@
             <li><a href="#">Контакты</a></li>
         </ul>
         <div class="flex enter">
-                <img src="img/profile.png" width="17" height="17" alt="">
-                <li><a href="#">&nbsp;Войти/</a></li>
-                <li><a href="#">&nbsp;регистрация</a></li>
-            </div>
+            <img src="img/profile.png" width="17" height="17" alt="">
+            <li><a href="#">&nbsp;Войти/</a></li>
+            <li><a href="#">&nbsp;регистрация</a></li>
+        </div>
     </div>
     <div class="border"></div>
     <div class="header-middle flex content-wrapper">
@@ -47,21 +47,37 @@
             <img src="" alt="">
             <p>Избранное 3</p>
             <div class="search-wrapper"><input class="search" type="search" placeholder="Поиск">
-                <button class="search-submit"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="5mm" height="5mm" version="1.1" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
-                    viewBox="0 0 20000 20000"
-                     xmlns:xlink="http://www.w3.org/1999/xlink">
-                     <defs>
-                      <style type="text/css">
-                        .str1 {stroke:#ffffff;stroke-width:1000;stroke-miterlimit:22.9256}
-                        .str0 {stroke:#ffffff;stroke-width:1000;stroke-linecap:round;stroke-miterlimit:22.9256}
-                        .fil0 {fill:none}
-                      </style>
-                     </defs>
-                     <g id="Слой_x0020_1">
-                      <metadata id="CorelCorpID_0Corel-Layer"/>
-                      <path class="fil0 str0" d="M8732.1 13558.94c-2534.88,204.19 -4937.98,-1220.39 -6003.81,-3559.13 -1393.34,-3057.39 -73.84,-6651.98 2947.21,-8028.76 3021.04,-1376.78 6599.6,-14.38 7992.94,3043.01 1339.39,2939 175.98,6399.93 -2649.96,7883.15"/>
-                      <path class="fil0 str1" d="M13340.26 11402.46l4878.49 4878.49c0,0 992.41,1144.09 281.62,1817.5 -710.79,673.41 -1846.84,-357.93 -1846.84,-357.93l-4752.59 -5089.23"/>
-                     </g>
+                <button class="search-submit"><svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="5mm"
+                        height="5mm" version="1.1"
+                        style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                        viewBox="0 0 20000 20000" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <defs>
+                            <style type="text/css">
+                                .str1 {
+                                    stroke: #ffffff;
+                                    stroke-width: 1000;
+                                    stroke-miterlimit: 22.9256
+                                }
+
+                                .str0 {
+                                    stroke: #ffffff;
+                                    stroke-width: 1000;
+                                    stroke-linecap: round;
+                                    stroke-miterlimit: 22.9256
+                                }
+
+                                .fil0 {
+                                    fill: none
+                                }
+                            </style>
+                        </defs>
+                        <g id="Слой_x0020_1">
+                            <metadata id="CorelCorpID_0Corel-Layer" />
+                            <path class="fil0 str0"
+                                d="M8732.1 13558.94c-2534.88,204.19 -4937.98,-1220.39 -6003.81,-3559.13 -1393.34,-3057.39 -73.84,-6651.98 2947.21,-8028.76 3021.04,-1376.78 6599.6,-14.38 7992.94,3043.01 1339.39,2939 175.98,6399.93 -2649.96,7883.15" />
+                            <path class="fil0 str1"
+                                d="M13340.26 11402.46l4878.49 4878.49c0,0 992.41,1144.09 281.62,1817.5 -710.79,673.41 -1846.84,-357.93 -1846.84,-357.93l-4752.59 -5089.23" />
+                        </g>
                     </svg></button>
             </div>
         </div>
@@ -69,23 +85,23 @@
 
     <ul class="main-nav flex borders">
         <div class="content-wrapper flex jc-between align-cent">
-        <div class="menubutton">
-            <div class="menuitem"></div>
-            <div class="menuitem"></div>
-            <div class="menuitem"></div>
-        </div>
-        <li class="first-menu-item"><a href="#">Каталог</a></li>
-        <li><a href="#">Женщинам</a></li>
-        <li><a href="#">Мужчинам</a></li>
-        <li><a href="#">Детям</a></li>
-        <li><a href="#">Подросткам</a></li>
-        <li><a href="#">Сезонность</a></li>
-        <li><a href="#">Оборудование</a></li>
-        <li><a href="#">Новинки</a></li>
-        <li><a href="#">Хиты</a></li>
-        <li><a href="#">Акции</a></li>
+            <div class="menubutton">
+                <div class="menuitem"></div>
+                <div class="menuitem"></div>
+                <div class="menuitem"></div>
+            </div>
+            <li class="first-menu-item"><a href="#">Каталог</a></li>
+            <li><a href="#">Женщинам</a></li>
+            <li><a href="#">Мужчинам</a></li>
+            <li><a href="#">Детям</a></li>
+            <li><a href="#">Подросткам</a></li>
+            <li><a href="#">Сезонность</a></li>
+            <li><a href="#">Оборудование</a></li>
+            <li><a href="#">Новинки</a></li>
+            <li><a href="#">Хиты</a></li>
+            <li><a href="#">Акции</a></li>
     </ul>
-</div>
+    </div>
     <div class="content-wrapper factory">
         <ul class="flex jc-between align-cent">
             <button class="proizv-button">Производители</button>
@@ -98,30 +114,139 @@
             </div>
 
             <div class="letter">
-                    <li>B
-                        <div class="info-container">
-                            5555
-                        </div>
-                    </li>
-                </div>
-            <li>C</li>
-            <li>D</li>
-            <li>E</li>
-            <li>F</li>
-            <li>G</li>
-            <li>H</li>
-            <li>I</li>
-            <li>G</li>
-            <li>K</li>
-            <li>L</li>
-            <li>M</li>
-            <li>N</li>
-            <li>O</li>
-            <li>P</li>
-            <li>R</li>
-            <li>S</li>
-            <li>T</li>
-            <li>V</li>
+                <li>B
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>C
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>D
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>E
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>F
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>G
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>H
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>I
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>G
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>K
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>L
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>M
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>N
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>O
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>P
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>R
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>S
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>
+                    <Thead></Thead>
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
+            <div class="letter">
+                <li>V
+                    <div class="info-container">
+                        5555
+                    </div>
+                </li>
+            </div>
             <li>W</li>
             <li>О</li>
             <li>М</li>
@@ -319,20 +444,20 @@
         <div style="border-right: 2px solid #b8b8b8" class="footer-item">
             <p>Карта сайта</p>
             <div class="flex wrap">
-            <div style="margin-right: 100px;">
-            <a href="#">О компании</a>
-            <a href="#">Новости</a>
-            <a href="#">Доставка</a>
-            <a href="#">Гарантии</a>
-            <a href="#">Контакты</a>
+                <div style="margin-right: 100px;">
+                    <a href="#">О компании</a>
+                    <a href="#">Новости</a>
+                    <a href="#">Доставка</a>
+                    <a href="#">Гарантии</a>
+                    <a href="#">Контакты</a>
+                </div>
+                <div style="margin-right: 105px;">
+                    <a href="#">Правила работы</a>
+                    <a href="#">Часто задаваемые вопросы</a>
+                    <a href="#">Таблица размеров</a>
+                    <a href="#">Информативные статьи</a>
+                </div>
             </div>
-            <div style="margin-right: 105px;">
-            <a href="#">Правила работы</a>
-            <a href="#">Часто задаваемые вопросы</a>
-            <a href="#">Таблица размеров</a>
-            <a href="#">Информативные статьи</a>
-        </div>
-    </div>
         </div>
         <div style="margin-left: 55px; margin-right: 65px; border-right: 2px solid #b8b8b8" class="footer-item">
             <p>Личный кабинет</p>
